# firewall_exp

./: .env  Cargo.toml  a.py  debug.txt  debug2.json  debug4.json  package-lock.json  python-z3.py  t.txt
src/: lib.rs  main.rs
src/core_module/: memory.rs  mod.rs  runner.rs  stack.rs  state.rs
src/core_module/context/: account_state_ex_context.rs  calldata_info.rs  evm_context.rs  mod.rs  transaction_context.rs
src/core_module/op_codes/: environment.rs  flow.rs  system.rs
src/core_module/op_codes/stack/: push.rs
src/core_module/utils/: bytes.rs  errors.rs
src/example/: call_tracer_test.rs  mod.rs  tx_with_state.rs  z3example.rs
src/paper/: exec_eng.rs  mod.rs  test_tx.rs
src/paper/evm_interpreter/: get_evm_interpreter.rs  mod.rs
src/paper/invariant/: database.rs  listening_tx.rs  mod.rs
src/paper/my_filed/: Handler.rs  Thread_test.rs  database_mod.rs  expression.rs  minitor.rs  mod.rs  parser.rs  sym_exec.rs
src/paper/strategy/: mod.rs  param_strategy.rs  path_strategy.rs  simiarity.rs
src/paper/tx_oplist/HeavenGate/: attack1_control.txt  attack1_full.txt  attack2_control.txt  attack2_full.txt  test1.txt  test2.txt
src/paper/tx_origin_data/: get_origin_calldata.rs  get_origin_oplist.rs  mod.rs
src/paper/z3module/: mod.rs  z3_solve.rs
web3script/: deploy_example.py  example.sol
