[package]
name = "evm-rs-emulator"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A blazingly fast in-memory Ethereum Virtual Machine (EVM) emulator written in Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[macro_use]
#extern crate dotenv_codegen;

[dependencies]
tokio = { version = "1", features = ["full"] }
colored = "2.0.4"
ethers = "2.0.7"
mem_storage = "0.1.1"
primitive-types = "0.12.1"
hex = "0.4"
rusty-hook = "0.11.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
alloy-primitives = "0.6.2"
alloy-rlp = "0.3.4"
revm-primitives = "2.0.0"
dotenv = "0.15.0"
reqwest = "0.11.26"
rayon = "1.10.0"
z3 = "0.12.1"
ethers-providers = { version = "2.0.7", features = ["ws"] }
mysql = "*"
chrono = "0.4"
regex = "1.10.5"
num-bigint = "0.4"
num-traits = "0.2"
ansi_term = "0.12"